Fixed display of container on different device sizes; removed font for consistency/make design more readable

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,20 +177,25 @@ nav ul li {
   height: 60%;
 }
 
-.main-project-container {
+.main-project {
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  width: 21.875rem;
-  padding: 1rem;
 }
 
-.main-project-card {
-  background-color: #fff;
-  border-radius: 11px;
-  box-shadow: 0 3px 10px var(--primary-shadow);
-  padding: 20px;
-  margin: 10px; 
+.main-project p {
+  font-size: 1.3em;
+}
+
+.main-project-title {
+  font-size: 1.4em;
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.projects-title {
+  font-size: 1.4em;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 .project-card {
